--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang=""en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>My First Website</title>
     </head>
     <body>
         <h1>Welcome to My Website</h1>
         <p>This is a sample HTML page.</p>
+        
         <ul>
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
         </ul>
-        <img src="https://media.tenor.com/65bUl5-gbL0AAAAi/baby-ai-meme.gif" alt="Placeholder Image">
+
+        <img 
+        src="https://media.tenor.com/65bUl5-gbL0AAAAi/baby-ai-meme.gif" 
+        alt="Placeholder Image"
+        />
         
         <div>
             Some text
         </div>
 
-        <form
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name"/>
+            <input type="submit" value="Submit"/>
+        </form>
 
-
-</DOCTYPE>
-Hello World!
+        <p>Hello World!</p>
+    </body>
+</html>
