Link stylesheet to index.html
Added a link to an external stylesheet for styling.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title> Lola UChe | Portfolio </title>
+        <title> Lola Uche | Portfolio </title>
+
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Lola UChe | Portfolio</h1>
+        <h1>Lola Uche | Portfolio</h1>
         <p>Aspiring software engineer based in London, learning to build web applications.</p>
 
     <ul>
@@ -58,5 +60,6 @@
     <p>Hello World!</p>
 </body>
 </html>
+
 
 
