--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
       <header>
         <div class="header-inner">
-          <h1>Lola UChe | Portfolio</h1>
+          <h1>Lola Uche | Portfolio</h1>
           <p class="subtitle">
             Aspiring software engineer based in London, learning to build web applications.
           </p>
@@ -74,6 +74,7 @@
     </body>
 
         
+
 
 
 
