--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title> Lola Uche | Portfolio </title>
 
         <link rel="stylesheet" href="styles.css" />
-        <script src="script.js"></script>
         
     </head>
     <body>
@@ -74,8 +73,10 @@
       </footer>
         <script src="script.js"></script>
     </body>
+</html>
 
         
+
 
 
 
